:lipstick: Fix main margin on mobile device

--- a/style.css
+++ b/style.css
@@ -186,4 +186,9 @@ h2 {
     h2 {
         font-size: 24px;
     }
+
+    main {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
 }
